# lyapunov

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  render.yaml  server.js
.github/workflows/: ci.yml
agent/: soul.md
site/: components.js  hero-attractor.html  hero-funnel.html  hero-phase-portrait.html  index.html  mini.html  paper.html  site.webmanifest  transmission.html
site/.well-known/: farcaster.json
solana/: README.md
solana/launch/: claim-descent.ts  create-pump-token.ts  fee-router.ts  feed-descent.ts  initialize-descent.ts  lib.ts  metadata.json  package-lock.json  package.json  read-state.ts
solana/program/programs/lyapunov-descent/: Cargo.toml
solana/program/programs/lyapunov-descent/src/: lib.rs
